Bug 402694 - in remove shares transaction field tab order sticks in number of shares field
Summary: in remove shares transaction field tab order sticks in number of shares field
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: git (master)
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-12-29 22:03 UTC by Jack
Modified: 2019-01-01 16:15 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Jack 2018-12-29 22:03:08 UTC
SUMMARY


STEPS TO REPRODUCE
1. create new or edit existing remove shares transaction in investment account
  (it might happen in other transaction types, I have not checked all.)
2. Tab through Activity, Date, Securty, Shares.  Hitting Tab again does not move to another field.  Shift-Tab fully cycles through all fields.
 
OBSERVED RESULT
  Tab does not advance from Shares field to any other.

EXPECTED RESULT
  Tab from Shares field should advance to Memo field.
Comment 1 Jack 2018-12-31 23:56:11 UTC
I find it is the same in the other investment transactions I have tried, so not specific to add or remove shares.
Comment 2 Thomas Baumgart 2019-01-01 11:11:40 UTC
Strange, I am unable to duplicate the problem here. Here's what I do: Press 'New' and use TAB to cycle through all fields multiple rounds (no other changes). Then play with the activity and cycle through using TAB multiple rounds in each. No single stop in any field. This is using form based transaction entry.

I see it different in register based entry. There it does not cycle through using TAB but also gets stucked using Back-TAB.
Comment 3 Thomas Baumgart 2019-01-01 13:32:28 UTC
Git commit daa58f3a993bdd55db094ec148d9dbcbe05963c6 by Thomas Baumgart.
Committed on 01/01/2019 at 13:33.
Pushed by tbaumgart into branch '5.0'.

Fix dynamics of investment transaction editor

The dynamic appearance of widgets depending on the selected activity was
completely broken. This caused trouble on the tab-order which was
reported.
FIXED-IN: 5.0.3

M  +6    -3    kmymoney/dialogs/investactivities.cpp
M  +44   -44   kmymoney/dialogs/investtransactioneditor.cpp
M  +32   -24   kmymoney/views/kgloballedgerview.cpp

https://commits.kde.org/kmymoney/daa58f3a993bdd55db094ec148d9dbcbe05963c6
Comment 4 Jack 2019-01-01 16:15:05 UTC
At least I was looking in the right area.  I was using gdb and stepping through those areas, but I couldn't quite follow what was going on, and I'm not quite good enough with gdb to meaningfully look at data items.

Thanks for fixing.