Fix dynamics of investment transaction editor

The dynamic appearance of widgets depending on the selected activity was
completely broken. This caused trouble on the tab-order which was
reported.

BUG: 402694
FIXED-IN: 5.0.3